// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> Renders properly 1`] = `
<div
  className="right menu"
>
  <a
    className="item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Signup
  </a>
  <a
    className="item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Login
  </a>
</div>
`;

exports[`<LoginModal /> Renders properly 1`] = `
<a
  className="item"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Login
</a>
`;

exports[`<SignupModal /> Renders properly 1`] = `
<a
  className="item"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Signup
</a>
`;
